# lead_report

./: .gitignore  clients.json  gui.py  highlight_structures.json  html2pdf.py  pyproject.toml  report_gen.py  requirements.txt  style.css  template_html.html
template/: template_html.html
