[tool.poetry]
name = "lead_report"
version = "0.1.0"
description = "lead pdf report generator"
authors = ["dovid <dovidsgreenberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
Jinja2 = "^3.1.2"
xhtml2pdf = "^0.2.7"
PyPDF2 = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
